# emuDeeS

./: .gitignore  README.md
README/: ANDROID.md  APPLE.md  WINDOWS.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/src/androidTest/java/com/antique/emudees/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bios.cpp  bios.h  cartridge.cpp  cartridge.h  core.cpp  core.h  cp15.cpp  cp15.h  defines.h  div_sqrt.cpp  div_sqrt.h  dldi.cpp  dldi.h  dma.cpp  dma.h  gpu.cpp  gpu.h  gpu_2d.cpp  gpu_2d.h  gpu_3d.cpp  gpu_3d.h  gpu_3d_renderer.cpp  gpu_3d_renderer.h  input.cpp  input.h  interface.cpp  interpreter.cpp  interpreter.h  interpreter_alu.cpp  interpreter_branch.cpp  interpreter_transfer.cpp  ipc.cpp  ipc.h  memory.cpp  memory.h  nds_icon.cpp  nds_icon.h  rtc.cpp  rtc.h  (+12 more)
android/app/src/main/java/com/antique/emudees/: GameActivity.kt  GameBrowser.kt  GameButton.kt  GameRenderer.kt  GameSurface.kt  Rom.kt  Setting.kt  SettingsMenu.kt
android/app/src/main/java/com/antique/emudees/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/antique/emudees/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
windows/: emuDeeS.sln
windows/emuDeeS/: emuDeeS.cpp  emuDeeS.vcxproj  emuDeeS.vcxproj.filters
